# forge

./: .gitignore  .mise.toml  README.md  TODOS.md  go.work  go.work.sum  install.sh
.claude/: CONTEXT.md
.github/workflows/: release.yml
core/: go.mod  main.go
core/cmd/: config.go  fluxforge.go  hearthforge.go  init.go  init_test.go  install.go  logs.go  penforge.go  root.go  secrets.go  smeltforge.go  start.go  status.go  stop.go  (+3 more)
docs/: 00-overview.md  01-architecture.md  02-project-structure.md  03-contributing.md  04-domains-and-tls.md  04-releasing.md  05-dev-containers.md  05-security.md  06-ssh-gateway.md  07-devctl.md  08-project-registry.md  09-operations.md  10-offboarding.md  12-troubleshooting.md  13-github-deploy-keys.md
fluxforge/: go.mod  module.go
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs
hearthforge/: go.mod  main.go
jjstack/: gartner24-docs-mcp-server-prerequisites-test-outcome-20260421193926.md  learnings.jsonl  office-hours.md  refactorforge-suite-reviews.jsonl  repo-mode.json  timeline.jsonl
old_docs/: 02-threat-model.md  03-networking-and-routing.md  06-ssh-gateway.md  07-devctl.md  09-operations.md  11-production-deploy.md  12-troubleshooting.md
penforge/: go.mod  main.go  module.go
registry/: devs.example.json  forge.json  gateway.toml  projects.json
shared/: go.mod  go.sum
smeltforge/: go.mod  main.go
sparkforge/: go.mod  go.sum  main.go  module.go
templates/: Dockerfile.node-dev  Dockerfile.python-dev  dev-compose.yml.tmpl  nginx-dev-vhost.conf.tmpl  sshd_config.tmpl
watchforge/: go.mod  main.go
(+194 files in other folders)
